# DataAnalysisAndML

./: README.md  pyproject.toml
Practice1/: CurrencyAnalysis.ipynb  currency_analysis.ipynb
Practice2/: python_practice.ipynb
Practice3/: web_scraping.ipynb
Practice4/: DeepLearningWithPyTorch.ipynb  DeepLearningWithPyTorchForWindows.ipynb  my_model.pickle
Practice5/: NumPy.ipynb
